@@ -30,15 +30,15 @@ EBUILD make-3.80-r4.ebuild 1133 SHA256 b55915a7f88f740a64c579c80825d423c4c22111a
 EBUILD make-3.81-r2.ebuild 1307 SHA256 e9869620c7d244c93b029362a4e370320ac8c17a4f509d9b8c3e8e8abcb2c234 SHA512 7b439eb63e17fe4fff7bb854c52c6976c41457eb0932da0c83479f2fe1fc50111d58dd0e7f6a66dd1aeb0b76e2aac7b3643b2d6883cf378f0916635dae97de56 WHIRLPOOL 7ad244e63180910b8a3172e03143aba27b56d573e16ddb14e0baf0d86f48ff9135f7b2b6e93b36e8f27c33dc2e5efbd3684cf9a55488c273c12ada8e66cd58cf
 EBUILD make-3.82-r4.ebuild 1880 SHA256 cc109e408ae4c430b4db2c980dc25a463a7e7eccc1d4a87cae9fc39bcd4c4095 SHA512 cf638ad9dc585febc99cccd982aaed70d0659847fd658c742ea9554a1e86f09fd7eccede9eb0e146f5aed4e48810b704642c93ec349fc30c12981af8f61284b4 WHIRLPOOL e133c760479ad6ec679d6d9dd1cfaeafbcce22432a99fd3c824565e6603eda4c2920beae2b105faa1bf74de70cc767bb5c4c6b37509bcc14548d6f7b7423a8bd
 EBUILD make-4.0-r1.ebuild 1478 SHA256 b756465b4b932082fc80abe0b55203a01bc4617646492bee5449999630a0a718 SHA512 768bece8211b71d461316ebee0fda3dde97d0f0a2636449c798e7daf4a3fd8676baacd34e6f6b836f588f81cc4bdaf526d3e96511dd8d36201c199ea15493248 WHIRLPOOL 592ade7419be37a2896b3233a66469aeaebbc04907548af7c452fe926377d62b23761e60bf9bbeb62efc0b42357150faa3591aa4aafdc264abed14130a00a165
-EBUILD make-4.1-r1.ebuild 1505 SHA256 fca58a68ff7965f004800f99659fbf276bb75bff9b4ab83cc3b22bbbfd8081b6 SHA512 e83a3dfe44f7cf0d333db04cbe8750b25aa51c04ddc7f1fff59b9a22eaaceb668afca892eaf8de2f027ad39f612fb7829edcb7b93904d4d934e76e70f6a66bc8 WHIRLPOOL 4170d1d28682f477db2c36dbd1c36f10d0a4064c928376d831965296c07839f462dcc1e61928a6d7ac46e382d815e241b590d2651fecb22b08bbacb0325c3a04
-MISC ChangeLog 17330 SHA256 1b299bff2e29812e9b408e802f5d9af25bd0e93433de8d58c54db561acd623f9 SHA512 7da47ee7e22c8eba35aab804fbe7d9dd3e5192596f4026ce534da8b54c65c11346ecbfc6f45574765e5078145711181d6daf18a8273b5671bb51b31aaf75bd54 WHIRLPOOL 4242ff13bd5d6b66fe16b7453d460cd8257ee1809f754394c0b7bcbe08bfde544e0f6ee85be5fac5d970d8e905a58dd61e5acea50ad7da9d08c752ed06edd18a
+EBUILD make-4.1-r1.ebuild 1498 SHA256 8fa0a0e1a50c5337aabc2cca62e540a00c7de8a3b3837debd3279382294834a7 SHA512 e4f5494096921d70b0e8ddd190e9db72aa05d45faa2331d94e39d41924962f8549f7bd1e70faff52f4c95c025ea6b0383c667e8c5835ee1089e8eb3c75be2243 WHIRLPOOL f86c865affda1d049f0404a9571aea5a7227625ee8b25785b29161333dbe3ed949517521cbd2784ab8a49568b9686bd535ff74e88782d017976f02237de308bd
+MISC ChangeLog 17532 SHA256 2839270183564ecd198015c5fafac39b07fb4334ae08862a073bb2a28b20d926 SHA512 cb0d8eace73836c160976ecbd336a3a480b510982efa0dc8c12264c6118bf7ed745ab9ef6f0324621861c41e1a470bb0ab168ccd3cc5009526e3017d3b8ec72c WHIRLPOOL c73954b32726141a49c91a74b95525259bd35d78e96fa1cd3654f5f346ad80f7902e346b6c7828c1480ec4211e9a6ab8c1c8f67296abb72fc73c1837cb75e1e6
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlRxzncACgkQG9wOWsQutdZMMAP/SKzmzext50ITpGTmsHN3r9+d
-+gNGXd75l4PRRedGN5zX5U0M1uHwHYGjrK9ON5mPp/0nN+t9dS8XUv91qCkIguxw
-6und3+fmgVjlXmJ8CnkVO3cIdvpJuJeLfOtDoGXQR7NSf4nKjFT2aye9q9wehaJQ
-jIS4nI64PqjzwFEC+gM=
-=zgMl
+iJwEAQEIAAYFAlTtmuEACgkQG9wOWsQutdZqDgQAsN++olOPaOP/QObyxxTs9gYE
+l0acrExJRi6KcK7ttTuJjtCeeqiVf8eU5yoalCWWg553OhErLv17ItM2gJMdLGGu
+dHiYLh32evkat3VhO3RvQcwFFw7ZquYR7as3FVlZ4FoNv6XKGEfgFFB4IQoZm+s9
+vRe5jHjUMMmp9HCH0nU=
+=pFV6
 -----END PGP SIGNATURE-----
