@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/make
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/make/ChangeLog,v 1.132 2014/11/23 12:10:54 zlogene Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/make/ChangeLog,v 1.134 2015/02/25 09:52:07 zlogene Exp $
+
+  25 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> make-4.1-r1.ebuild:
+  x86 stable wrt bug #540868
+
+  25 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> make-4.1-r1.ebuild:
+  amd64 stable wrt bug #540868
 
   23 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> make-4.0-r1.ebuild:
   ppc64 stable wrt bug #524530
